Stage2/y.output
Terminals unused in grammar

   ASSIGN


Grammar

    0 $accept: Program $end

    1 Program: slist NEWLINE

    2 slist: slist stmt
    3      | stmt

    4 expr: expr PLUS expr
    5     | expr MINUS expr
    6     | expr MUL expr
    7     | ID
    8     | NUM

    9 stmt: ID ASGN expr ';'
   10     | READ '(' ID ')' ';'
   11     | WRITE '(' ID ')' ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11
')' (41) 10 11
';' (59) 9 10 11
error (256)
PLUS (258) 4
MINUS (259) 5
MUL (260) 6
ID (261) 7 9 10 11
ASSIGN (262)
NUM (263) 8
READ (264) 10
WRITE (265) 11
ASGN (266) 9
NEWLINE (267) 1


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
Program (17)
    on left: 1, on right: 0
slist (18)
    on left: 2 3, on right: 1 2
expr (19)
    on left: 4 5 6 7 8, on right: 4 5 6 9
stmt (20)
    on left: 9 10 11, on right: 2 3


State 0

    0 $accept: . Program $end

    ID     shift, and go to state 1
    READ   shift, and go to state 2
    WRITE  shift, and go to state 3

    Program  go to state 4
    slist    go to state 5
    stmt     go to state 6


State 1

    9 stmt: ID . ASGN expr ';'

    ASGN  shift, and go to state 7


State 2

   10 stmt: READ . '(' ID ')' ';'

    '('  shift, and go to state 8


State 3

   11 stmt: WRITE . '(' ID ')' ';'

    '('  shift, and go to state 9


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 5

    1 Program: slist . NEWLINE
    2 slist: slist . stmt

    ID       shift, and go to state 1
    READ     shift, and go to state 2
    WRITE    shift, and go to state 3
    NEWLINE  shift, and go to state 11

    stmt  go to state 12


State 6

    3 slist: stmt .

    $default  reduce using rule 3 (slist)


State 7

    9 stmt: ID ASGN . expr ';'

    ID   shift, and go to state 13
    NUM  shift, and go to state 14

    expr  go to state 15


State 8

   10 stmt: READ '(' . ID ')' ';'

    ID  shift, and go to state 16


State 9

   11 stmt: WRITE '(' . ID ')' ';'

    ID  shift, and go to state 17


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    1 Program: slist NEWLINE .

    $default  reduce using rule 1 (Program)


State 12

    2 slist: slist stmt .

    $default  reduce using rule 2 (slist)


State 13

    7 expr: ID .

    $default  reduce using rule 7 (expr)


State 14

    8 expr: NUM .

    $default  reduce using rule 8 (expr)


State 15

    4 expr: expr . PLUS expr
    5     | expr . MINUS expr
    6     | expr . MUL expr
    9 stmt: ID ASGN expr . ';'

    PLUS   shift, and go to state 18
    MINUS  shift, and go to state 19
    MUL    shift, and go to state 20
    ';'    shift, and go to state 21


State 16

   10 stmt: READ '(' ID . ')' ';'

    ')'  shift, and go to state 22


State 17

   11 stmt: WRITE '(' ID . ')' ';'

    ')'  shift, and go to state 23


State 18

    4 expr: expr PLUS . expr

    ID   shift, and go to state 13
    NUM  shift, and go to state 14

    expr  go to state 24


State 19

    5 expr: expr MINUS . expr

    ID   shift, and go to state 13
    NUM  shift, and go to state 14

    expr  go to state 25


State 20

    6 expr: expr MUL . expr

    ID   shift, and go to state 13
    NUM  shift, and go to state 14

    expr  go to state 26


State 21

    9 stmt: ID ASGN expr ';' .

    $default  reduce using rule 9 (stmt)


State 22

   10 stmt: READ '(' ID ')' . ';'

    ';'  shift, and go to state 27


State 23

   11 stmt: WRITE '(' ID ')' . ';'

    ';'  shift, and go to state 28


State 24

    4 expr: expr . PLUS expr
    4     | expr PLUS expr .
    5     | expr . MINUS expr
    6     | expr . MUL expr

    MUL  shift, and go to state 20

    $default  reduce using rule 4 (expr)


State 25

    4 expr: expr . PLUS expr
    5     | expr . MINUS expr
    5     | expr MINUS expr .
    6     | expr . MUL expr

    MUL  shift, and go to state 20

    $default  reduce using rule 5 (expr)


State 26

    4 expr: expr . PLUS expr
    5     | expr . MINUS expr
    6     | expr . MUL expr
    6     | expr MUL expr .

    $default  reduce using rule 6 (expr)


State 27

   10 stmt: READ '(' ID ')' ';' .

    $default  reduce using rule 10 (stmt)


State 28

   11 stmt: WRITE '(' ID ')' ';' .

    $default  reduce using rule 11 (stmt)
